Resolve issue w/ home video overlay covering entire page.

--- a/sites/elab/public/styles/custom.scss
+++ b/sites/elab/public/styles/custom.scss
@@ -141,7 +141,6 @@ html, body, .container {
   left: 20%;
   width: 60%;
   top: 0;
-  height: 100%;
   h1, h3 {
     color: $white;
   }
