--- a/sites/elab/public/styles/site.css
+++ b/sites/elab/public/styles/site.css
@@ -5488,8 +5488,7 @@ html, body, .container {
   z-index: 3;
   left: 20%;
   width: 60%;
-  top: 0;
-  height: 100%; }
+  top: 0; }
   .overlay h1, .overlay h3 {
     color: #ffffff; }
   .overlay h1 {
